--- a/MyCamp Task16/Task16.40/Task16.40.array.of.objects.person.v2.3.html
+++ b/MyCamp Task16/Task16.40/Task16.40.array.of.objects.person.v2.3.html
@@ -22,18 +22,16 @@
     /*** REGION 3 - Event handlers - Vùng khai báo các hàm xử lý sự kiện */
     function onPageLoading() {
         // Gọi thử của function getPersonByIndex, ghi object ra console
-        getPersonByIndex(1);
-        // Gọi thử hàm getPersonByCitizenID() và ghi object ra console
-        getPersonByCitizenID("E9442");
+
     }
 
     /*** REGION 4 - Common funtions - Vùng khai báo hàm dùng chung trong toàn bộ chương trình*/
     // đây là 01 function đã trả lại person bởi index.
     function getPersonByIndex(paramIndexPerson) {
-        if (paramIndexPerson < 0 || paramIndexPerson > vLIST_PERSON - 1) {
+        if (paramIndexPerson < 0 || paramIndexPerson > vLIST_PERSON.length - 1) {
             return null;
         }
-        return(vLIST_PERSON[paramIndexPerson]);
+        return (vLIST_PERSON[paramIndexPerson]);
     }
 
     // bạn hãy viết function trả lại person theo citizenID 
@@ -43,16 +41,16 @@
         var vPersonIndex = 0;
         var vPersonFound = false;
         //  
-        while (vPersonFound == false && vPersonIndex < vLIST_PERSON.length) { 
-            if (vLIST_PERSON[vPersonIndex].citizenID == paramCitizenID) { 
+        while (vPersonFound == false && vPersonIndex < vLIST_PERSON.length) {
+            if (vLIST_PERSON[vPersonIndex].citizenID == paramCitizenID) {
                 vPersonObj = vLIST_PERSON[vPersonIndex];
             }
-            else {  
-                vPersonIndex ++;
+            else {
+                vPersonIndex++;
             }
         }
         return vPersonObj;
-        console.log(vPersonObj);
+
     }
 
 </script>
