--- a/MyCamp Task16/Task16.70/Task16.70.html
+++ b/MyCamp Task16/Task16.70/Task16.70.html
@@ -63,7 +63,7 @@
 
 <body onload="onPageLoading()" class="bg bg-transparent">
     <div class="jumbotron">
-        <h1> Test Page for Devcamp Javascrip Tasks </h1>
+        <h1> Test Page for Dev camp Javascript Tasks </h1>
         <p> Press F5 to run code. Don't forget to Save your code before running. (Ctrl+S). </p>
     </div>
 </body>
