--- a/MyCamp Task21/pizza365index.html
+++ b/MyCamp Task21/pizza365index.html
@@ -65,6 +65,8 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -81,6 +83,12 @@
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="images/anh_mon_5.jpg" alt="Fifth slide" />
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/anh_mon_6.jpg" alt="Fifth slide" />
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="images/anh_mon_7.jpg" alt="Fifth slide" />
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -305,7 +313,11 @@
                   <label for="message">Lời nhắn</label>
                   <input type="text" class="form-control" id="input-message" placeholder="Lời nhắn" />
                 </div>
-                <button type="button" class="btn-green"> Kiểm tra đơn </button>
+                <div class="form-group">
+                  <label for="voucher">Mã giảm giá (Voucher ID)</label>
+                  <input type="text" class="form-control" id="input-voucher" placeholder="Mã Voucher" />
+                </div>
+                <button type="button" class="btn-green" onclick="onBtnCheckOrder()"> Kiểm tra đơn </button>
 
               </div>
             </div>
@@ -314,7 +326,7 @@
           <div id="div-container-order" class="container bg-info p-2 jumbotron" style="display: none">
             <div id="div-order-infor" class="text-white p-3">thông tin đơn hàng vào đây</div>
             <div class="p-2">
-              <button type="button" class="btn-yellow"> Gửi đơn </button>
+              <button type="button" class="btn-yellow" onclick="onBtnSendOrder()"> Gửi đơn </button>
             </div>
           </div>
         </div>
@@ -402,8 +414,173 @@
     console.log(`%c===============CHOSEN TYPE===============`, 'color : gray; font-size : 20px')
     console.log(`%cBacon`, 'font-size : 20px')
   }
+
+  /// ORDER CHECKING
+  function onBtnCheckOrder() {
+    var vOrder = {
+      menuDuocChon: null,
+      loaiPizza: null,
+      hovaten: "",
+      email: "",
+      dienThoai: "",
+      diaChi: "",
+      loiNhan: "",
+      voucher: "",
+      phanTramGiamGia: "",
+      gia: "",
+      priceAnnualVND: function () {
+        return this.gia * ((100 - this.phanTramGiamGia) / 100);
+      }
+    }
+    // get order informations
+    var vMenu = getMenu();
+    var vPizzaType = getPizza();
+    var vName = document.getElementById('input-name');
+    var vEmail = document.getElementById('input-email');
+    var vPhoneNumber = document.getElementById('input-phone');
+    var vAddress = document.getElementById('input-address');
+    var vMessage = document.getElementById('input-message');
+    var vVoucher = document.getElementById('input-voucher');
+
+    vOrder.menuDuocChon = vMenu;
+    vOrder.loaiPizza = vPizzaType;
+    vOrder.hovaten = vName.value;
+    vOrder.email = vEmail.value;
+    vOrder.dienThoai = vPhoneNumber.value;
+    vOrder.diaChi = vAddress.value;
+    vOrder.loiNhan = vMessage.value;
+    vOrder.voucher = vVoucher.value;
+    vOrder.phanTramGiamGia = getVoucherDiscount(vOrder.voucher);
+    vOrder.gia = vMenu.Price;
+    // Validate
+    var vDataValidated = validateData(vOrder);
+    var vPhoneNumberValidated = validatePhoneNumber(vOrder);
+    var vEmailValidated = validateEmail(vOrder);
+    // Get Hidden Container 
+    var vHiddenContainer = document.getElementById('div-container-order');
+    var vOrderInfo = document.getElementById('div-order-infor');
+    if (vDataValidated != false && vPhoneNumberValidated != false && vEmailValidated != false) {
+      vHiddenContainer.style.display = "block"
+      vOrderInfo.innerHTML = `
+      Họ và Tên: ${vOrder.hovaten} <br>
+      Email: ${vOrder.email}<br>
+      Số điện thoại: ${vOrder.dienThoai}<br>
+      ------------------------------------ <br>
+      Kích cỡ: ${vOrder.menuDuocChon.Size}<br>
+      Đường kính: ${vOrder.menuDuocChon.Diameter} <br>
+      Sườn nướng: ${vOrder.menuDuocChon.BakedRibs}<br>
+      Salad: ${vOrder.menuDuocChon.Salad}<br>
+      Nước ngọt: ${vOrder.menuDuocChon.SoftDrink}<br>
+      ------------------------------------ <br>
+      Loại Pizza: ${vOrder.loaiPizza} <br>
+      Mã Voucher: ${vOrder.voucher} <br>
+      Giá vnd : ${vOrder.menuDuocChon.Price} <br>
+      Discount % : ${vOrder.phanTramGiamGia} <br>
+      Phải thanh toán vnd : ${vOrder.priceAnnualVND()}
+      
+      `
+    }
+    return vOrder;
+  }
+
+  function onBtnSendOrder() {
+    var vOrderInfo = document.getElementById('div-order-infor');
+    console.log(vOrderInfo.innerHTML)
+  }
   /*** REGION 4 - Common funtions - Vùng khai báo hàm dùng chung trong toàn bộ chương trình*/
   // ========================================================= //
+  // Validate Data 
+  function validateData(paramOrder) {
+    // MENU
+    if (paramOrder.menuDuocChon.Size == null) {
+      alert("Choose Menu");
+      return false;
+    }
+    // PIZZA
+    if (paramOrder.loaiPizza == null) {
+      alert("Choose Pizza");
+      return false;
+    }
+    // Name
+    if (paramOrder.hovaten == "") {
+      alert("Type name");
+      return false;
+    }
+    // Address
+    if (paramOrder.diaChi == "") {
+      alert("Type Address");
+      return false;
+    }
+  }
+  function validateEmail(paramOrder) {
+    // Email 
+    if (paramOrder.email.includes("@") == false || paramOrder.email.includes(".") == false || paramOrder.email.includes("com") == false) {
+      alert("Check email");
+      return false;
+    }
+  }
+  function validatePhoneNumber(paramOrder) {
+    if (paramOrder.dienThoai.startsWith("+") == false && paramOrder.dienThoai.startsWith("0") == false) {
+      alert("Check phone number");
+      return false;
+    }
+    if (paramOrder.dienThoai.length < 10 || paramOrder.dienThoai.length > 12) {
+      alert("Check phone number lenght");
+      return false;
+    }
+  }
+  // =================================================
+  // Get Voucher 
+  function getVoucherDiscount(paramVoucher) {
+    for (var bI = 0; bI < gDiscountVouchers.length; bI++) {
+      if (gDiscountVouchers[bI].voucherID == paramVoucher) {
+        return gDiscountVouchers[bI].percentDiscount;
+      }
+    }
+  }
+  // Get Menu Selected
+  function getMenu() {
+    var vSmall = document.getElementById("btn-size-small");
+    var vMedium = document.getElementById("btn-size-medium");
+    var vLarge = document.getElementById("btn-size-large");
+
+    var vSmallAttr = vSmall.getAttribute("data-is-selected");
+    var vMediumAttr = vMedium.getAttribute("data-is-selected");
+    var vLargeAttr = vLarge.getAttribute("data-is-selected");
+
+    if (vSmallAttr === "Y") {
+      return getSizeObject(gSMALL_SIZE, 20, 2, 200, 2, 150);
+    }
+    else if (vMediumAttr === "Y") {
+      return getSizeObject(gMEDIUM_SIZE, 25, 4, 300, 3, 200);
+    }
+    else if (vLargeAttr === "Y") {
+      return getSizeObject(gLARGE_SIZE, 30, 8, 500, 4, 250);
+    }
+    else if (vSmallAttr === "N" && vMediumAttr === "N" && vLargeAttr === "N") {
+      return getSizeObject(null, null, null, null, null, null);
+    }
+  }
+  // Get Pizza Selected
+  function getPizza() {
+    var vHawai = document.getElementById("btn-type-hawai");
+    var vHaiSan = document.getElementById("btn-type-hai-san");
+    var vBacon = document.getElementById("btn-type-bacon");
+
+    var vHawaiAttr = vHawai.getAttribute("data-is-selected");
+    var vHaiSanAttr = vHaiSan.getAttribute("data-is-selected");
+    var vBaconAttr = vBacon.getAttribute("data-is-selected");
+
+    if (vHawaiAttr === "Y") {
+      return "Pizza Hawai";
+    }
+    else if (vHaiSanAttr === "Y") {
+      return "Pizza Hải sản"
+    }
+    else if (vBaconAttr === "Y") {
+      return "Pizza Bacon"
+    }
+  }
   // Get Size
   function getSizeObject(paramSize, paramDiameter, paramBakedRibs, paramSalad, paramSoftDrink, paramPrice) {
     var vSizeObj = {
