--- a/MyCamp Task20/Task20.30/Task20.30.register.form.v1.3.html
+++ b/MyCamp Task20/Task20.30/Task20.30.register.form.v1.3.html
@@ -79,6 +79,7 @@
 
   /*** REGION 3 - Event handlers - Vùng khai báo các hàm xử lý sự kiện */
   function onBtnSendClick() {
+    // debugger;
     var vInfo = {
       firstname: "",
       lastname: "",
