--- a/MyCamp Task20/Task20.65/Task20.65.html
+++ b/MyCamp Task20/Task20.65/Task20.65.html
@@ -95,6 +95,7 @@
     }
     function addNewDataRow() {
         "use strict";
+        console.log("Ấn nút save data.");
         const vEND_OF_TABLE = -1;
         var vPersonTable = document.getElementById("table-person");
         var vNewRow = vPersonTable.insertRow(vEND_OF_TABLE);
