--- a/MyCamp Task22/Task22.20/task 22.20 Json object array parsing.html
+++ b/MyCamp Task22/Task22.20/task 22.20 Json object array parsing.html
@@ -29,6 +29,7 @@
 </script>
 
 <script>
+    debugger;
     // hãy viết code của bạn cho Lisa
     var gJsonLisaString = `{"name":"Lisa Moore", "age":23, "city" :"Atlanta", "cars" : [{"brand" : "Ford", "vid" : "VA-203911"}, {"brand" : "Mercedes", "vid" : "MA-82382"},{"brand" : "Honda", "vid" : "GG-32953"}]}`;
     var gPersonLisa = JSON.parse(gJsonLisaString);
