--- a/MyCamp Task23/Task23.50/task 23.50 local.register.form v3.3.html
+++ b/MyCamp Task23/Task23.50/task 23.50 local.register.form v3.3.html
@@ -15,28 +15,32 @@
             <h3>THÔNG TIN CHI TIẾT NGƯỜI DÙNG</h3>
         </div>
         <div class="row form-group">
-            <label class="col-form-label col-sm-4" for="input-user-id">Nhập Id của user <span class="text-danger">(*)</span></label>
+            <label class="col-form-label col-sm-4" for="input-user-id">Nhập Id của user <span
+                    class="text-danger">(*)</span></label>
             <div class="col-sm-5">
                 <input id="input-user-id" placeholder="Nhập id user ..." class="form-control">
             </div>
             <div class="col-sm-3">
-                <button class="btn btn-primary">Lấy thông tin</button>
+                <button class="btn btn-primary" onclick="onBtnGetInformation()">Lấy thông tin</button>
             </div>
         </div>
         <div class="row form-group mt-4">
-            <label class="col-form-label col-sm-4" for="input-firstname">First name <span class="text-danger">(*)</span></label>
+            <label class="col-form-label col-sm-4" for="input-firstname">First name <span
+                    class="text-danger">(*)</span></label>
             <div class="col-sm-8">
                 <input id="input-firstname" placeholder="First name" class="form-control">
             </div>
         </div>
         <div class="row form-group">
-            <label class="col-form-label col-sm-4" for="input-lastname">Last name <span class="text-danger">(*)</span></label>
+            <label class="col-form-label col-sm-4" for="input-lastname">Last name <span
+                    class="text-danger">(*)</span></label>
             <div class="col-sm-8">
                 <input id="input-lastname" placeholder="Last name" class="form-control">
             </div>
         </div>
         <div class="row form-group">
-            <label class="col-form-label col-sm-4" for="input-subject">Subject <span class="text-danger">(*)</span></label>
+            <label class="col-form-label col-sm-4" for="input-subject">Subject <span
+                    class="text-danger">(*)</span></label>
             <div class="col-sm-8">
                 <input type="text" id="input-subject" placeholder="Subject" class="form-control">
             </div>
@@ -73,18 +77,81 @@
                     <option value="New">New</option>
                 </select>
             </div>
-        </div> 
+        </div>
     </div>
 </body>
 <script>
+    "use strict";
     /*** REGION 1 - Global variables - Vùng khai báo biến, hằng số, tham số TOÀN CỤC */
-    
+    const gREQUEST_STATUS_OK = 200;
     /*** REGION 2 - Vùng gán / thực thi hàm xử lý sự kiện cho các elements */
 
     /*** REGION 3 - Event handlers - Vùng khai báo các hàm xử lý sự kiện */
-    
-    /*** REGION 4 - Common funtions - Vùng khai báo hàm dùng chung trong toàn bộ chương trình*/
+    function onBtnGetInformation() {
+        "use strict";
+        // --- Get Elements ---
+        var vFirstnameElement = document.getElementById('input-firstname');
+        var vLastnameElement = document.getElementById('input-lastname');
+        var vSubjectElement = document.getElementById('input-subject');
+        var vCountryElement = document.getElementById('select-country');
+        var vCustomerTypeElement = document.getElementById('select-customer-type');
+        var vRegisterStatusElement = document.getElementById('select-register-status');
+        // --- GET ID ---
+        var vIdElement = document.getElementById('input-user-id');
+        var vId = vIdElement.value.trim();
+        // --- Person OBJECT ---
+        var vPersonObject = {
+            id: "",
+        }
+        vPersonObject.id = vId;
+        console.log("ID input: " + vPersonObject.id)
+        // --- VALIDATE ---
+        var vValidateResult = false;
+        vValidateResult = validateID();
+        if (vValidateResult == true) {
+            var vXmlHttp = new XMLHttpRequest();
+            processAjax(vXmlHttp, vPersonObject.id);
 
+            var vStatusCode = vXmlHttp.status;
+
+            if (vStatusCode = gREQUEST_STATUS_OK) {
+                vPersonObject = JSON.parse(vXmlHttp.responseText);
+                console.log(vPersonObject);
+                //--- SHOW INFORMATION ----------------------------------------------------------------
+                vFirstnameElement.value = vPersonObject.firstname;
+                vLastnameElement.value = vPersonObject.lastname;
+                vSubjectElement.value = vPersonObject.subject;
+                vCountryElement.value = vPersonObject.country;
+                vCustomerTypeElement.value = vPersonObject.customerType;
+                vRegisterStatusElement.value = vPersonObject.registerStatus;
+            }
+        }
+    }
+    /*** REGION 4 - Common funtions - Vùng khai báo hàm dùng chung trong toàn bộ chương trình*/
+    // --- VALIDATE ---
+    function validateID() {
+        "use strict";
+        var vIdElement = document.getElementById('input-user-id');
+        var vId = vIdElement.value.trim();
+        if (vId == '') {
+            alert('Please input ID');
+            return false;
+        }
+        if (isNaN(vId)) {
+            alert('ID must be number')
+            return false;
+        }
+        else {
+            return true;
+        }
+
+    }
+    // --- AJAX ---
+    function processAjax(paramRequest, paramId) {
+        "use strict";
+        paramRequest.open("GET", "http://203.171.20.210:8080/crud-api/users/" + paramId, false);
+        paramRequest.send();
+    }
 </script>
 
 </html>
