--- a/MyCamp Task21/pizza365index.html
+++ b/MyCamp Task21/pizza365index.html
@@ -462,8 +462,8 @@
     if (vDataValidated != false && vPhoneNumberValidated != false && vEmailValidated != false) {
       vHiddenContainer.style.display = "block"
       vOrderInfo.innerHTML = `
-      Họ và Tên: ${vOrder.hovaten} <br>
-      Email: ${vOrder.email}<br>
+      Họ và Tên: ${vOrder.hovaten} 
+      Email: ${vOrder.email}
       Số điện thoại: ${vOrder.dienThoai}<br>
       ------------------------------------ <br>
       Kích cỡ: ${vOrder.menuDuocChon.Size}<br>
