--- a/MyCamp Task17/index.html
+++ b/MyCamp Task17/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="big-image"><img src="people-playing-casino.jpg" alt=""></div>
     </div>
-    <h1 class="title">Chào mừng đến với Lucky Casino</h1>
+    <h1 class="title">Chào mừng đến với Lucky Casino A</h1>
     <img src="dice.png" alt="" class="img-dice" id="img-dice" style="width: 140px; height: 140px"> <br>
     <button id="btn-dice" style="width: 100px; height: 50px;" onclick="onDicePlayClick()">Ném</button>
     <h2 id="text-ketqua"></h2>
