--- a/MyCamp Task25/pizza365index.html
+++ b/MyCamp Task25/pizza365index.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="#">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#combo">SIZE COMBOS</a>
+                <a class="nav-link" href="#combo">COMBOS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#type">PIZZA TYPES</a>
