--- a/MyCamp Task5/task5.1/Task5.1.html
+++ b/MyCamp Task5/task5.1/Task5.1.html
@@ -22,21 +22,23 @@
         </div>
         <div class="right-content">
             <p id="session">
-                BEGIN SESSION
+                BEGIN SESSIO N  
             </p>
             <img src="Card.png" alt="shop" id="cartlogo">
             <!-- ----------------------------------P2---------------------------------------- -->
             <br><br><br><br><br>
             <h1> TRACK BUTTONS </h1>
             <h2>$199,99</h2>
-            <p id="ivory">IVORY WHITE  | 7272/337</p>
-            <p id="longp">We work with our suppliers, workers, unions and <br> international bodies to develop a supply chain where human <br> rights are promited and respected, contributing to the <br> United Nations Sustainable Development Goals</p>
+            <p id="ivory">IVORY WHITE | 7272/337</p>
+            <p id="longp">We work with our suppliers, workers, unions and <br> international bodies to develop a supply
+                chain where human <br> rights are promited and respected, contributing to the <br> United Nations
+                Sustainable Development Goals</p>
             <div class="size">
                 <button>Ep</button>
                 <button>P</button>
                 <button>M</button>
                 <button>G</button>
-                <button>EG  </button>
+                <button>EG </button>
             </div>
             <a href="#" id="sizeguide">SIZE GUIDE</a> <br> <br> <br>
             <button id="Add">ADD TO BAG</button>
